--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
 
-    <title>React App</title>
-    <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+    <title>Aldo Garcia</title>
     <link rel="stylesheet" type="text/css" href="style.css"/>
   </head>
   <body>
